--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,17 +6,16 @@ phases:
       - echo Connecting to Amazon ECR...
       - aws --version
       # - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - aws ecr get-login-password --region ap-southeast-2 | docker login
-        --username AWS --password-stdin
-        860357884138.dkr.ecr.ap-southeast-2.amazonaws.com
+      - aws ecr get-login-password --region ap-southeast-2 | docker login --username AWS --password-stdin 860357884138.dkr.ecr.ap-southeast-2.amazonaws.com
       - REPOSITORY_URI=860357884138.dkr.ecr.ap-southeast-2.amazonaws.com/demo
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
     commands:
+      - echo $REPOSITORY_URI
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build --platform linux/amd64 -t $REPOSITORY_URI:latest .
+      - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
