--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Docker CI/CD Pipeline
 on:
   push:
     branches:
-      - develop
+      - main
 
 # Định nghĩa các jobs cần thực hiện 
 jobs:
